去掉无用包,解决依赖冲突

--- a/ym-parent/ym-dubbo/pom.xml
+++ b/ym-parent/ym-dubbo/pom.xml
@@ -39,7 +39,7 @@
             <artifactId>dubbo</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.101tec</groupId>
+            <groupId>com.github.sgroschupf</groupId>
             <artifactId>zkclient</artifactId>
         </dependency>
         <dependency>
